[package]
name = "dao"
version = "0.1.0"
description = "program for creating polling dao's by staking tokens, executed polls reward points to voting users"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dao"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
